--- a/index.html
+++ b/index.html
@@ -2,29 +2,34 @@
 <html>
 <head>
 	<meta charset=utf-8>
-	<title>jQuery Events</title>
-	<link rel="stylesheet" href="day.css">
+	<title>jQuery tutorials</title>
+	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-	<h1>My website</h1>
-	<button data-file="day">Day</button>
-	<button data-file="night">Night</button>
 
+	<dl>
+	    <dt>What are your hours?</dt>
+		<dd>We are open 24/7</dd>
+	    <dt>What are your hours?</dt>
+		<dd>We are open 24/7</dd>
+	    <dt>What are your hours?</dt>
+		<dd>We are open 24/7</dd>
+	    <dt>What are your hours?</dt>
+		<dd>We are open 24/7</dd>
+	    <dt>What are your hours?</dt>
+		<dd>We are open 24/7</dd>
+	</dl>
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.js"></script>
 	<script>
 		(function() {
-			var link = $('link');
-			$('button').on('hover', function() {
-				var $this = $(this),
-					sheet = $this.data('file');
+			$('dd').filter(':nth-child(n+4)').hide();
 
-				link.attr('href', sheet + '.css');
-
-				$this
-					.siblings('button')
-						.removeAttr('disabled')
-						.end()
-						.attr('disabled', 'disabled');
+			$('dl').on('mouseenter', 'dt', function() {
+				$(this)
+					.next()
+						.slideDown(200)
+					    .siblings('dd')
+					    	.slideUp(200);
 			});
 		})();
 	</script>
