--- a/index.html
+++ b/index.html
@@ -3,101 +3,39 @@
 <head>
 	<meta charset=utf-8>
 	<title>jQuery tutorials</title>
-	<link rel="stylesheet" href="style.css">
-	<style type="text/css">
-		body {
-			margin: 0;
-		}
-		.box {
-			width: 400px;
-			background: red;
-			padding: 2em;
-			position: relative;
-			-webkit-transition: border-radius 1s;
-		}
+	<style>
+	body {
+		width: 600px;
+		margin: 100px auto 0;
+	}
 
-		.rounded { border-radius: 50px };
+	* { margin: 0; padding: 0; }
 	</style>
+	<link rel="stylesheet" href="slider.css">
 </head>
 <body>
-	<div class="box">
-		<h2>Some Content Here</h2>
-		<p>ts just another depression, that happen every so often. At that point, no one had any idea how bad it would be. Hoover believed in the concept of ?rugged individualism? where basically, he disagreed with socialism/communism (more basically, he was conservative). So he started out with no special programs, as any president would have done (including FDR) in his position. He started out with encouragement towards business management, then when everyone started to realize it was bad, he started to move towards more drastic measures, such as his</p>
+	<div class="slider">
+		<ul>
+		    <li>
+		        <img src="img/img1.gif" alt="image" />
+		    </li>
+		    <li>
+		        <img src="img/img2.gif" alt="image" />
+		    </li>
+		    <li>
+		        <img src="img/img3.gif" alt="image" />
+		    </li>
+		    <li>
+		        <img src="img/img4.gif" alt="image" />
+		    </li>
+		</ul>
 	</div>
-	<p>
-	<!-- Uncomment for most of the examples	
-		<button>Increase</button>
-	-->
-		<button>Center</button>
-	</p>
+
+	<div id="slider-nav">
+		<button data-dir="prev">Previous</button>
+		<button data-dir="next">Next</button>
+	</div>
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.js"></script>
-	<script>
-	(function() {
-		var box = $('div.box');
-		// Center
-		// outerWidth takes into account border/margins
-		var w = $(window).width() / 2 - box.outerWidth() / 2;
-		var h = $(window).height() /2 - box.outerHeight() / 2;
-		//speed, easing, callback
-		$('button').on('click', function() {
-			box.addClass('rounded');
-		/*
-			box.animate({
-				'left': w,
-				'position': 'absolute'
-			})
-			.animate({
-				'top': h
-			}, { duration: 2000, queue: false });
-		*/
-
-		/*
-		* Animate example 1
-
-			box.animate({
-				'fontSize': '+=5',
-				'width': '+=300'
-			}, 500, 'swing', function() {
-				console.log('complete');
-			});
-		*/
-
-		/* Animate with complete and step callbacks
-		*
-			box.animate({
-				'fontSize': '+=5'
-				}, {
-				duration: 500,
-				complete: function() {
-					console.log('completed');
-				},
-				step: function() {
-					console.log($(this).css('fontSize'));
-				}
-			});
-		*/
-
-		/*
-		* Two animates together
-		*
-			box
-				.animate({
-					'fontSize': '+=5'
-				}, { duration: 500 })
-				.animate({ 'top': 500 }, 300);
-		});
-		*/
-
-		/*
-		* Two animates without queue (execute at the same time)
-			box
-				.animate({
-					'fontSize': '+=5'
-				}, { duration: 500 })
-				.animate({ 'top': 500 }, { duration: 3000, queue: false });
-		*/
-		});
-	})();
-	</script>
+	<script src="slider.js"></script>
 </body>
 </html>
