--- a/index.html
+++ b/index.html
@@ -37,5 +37,16 @@
 	</div>
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.js"></script>
 	<script src="slider.js"></script>
+	<script type="text/javascript">
+	(function() {
+		var container = $('div.slider').css('overflow', 'hidden').children('ul');
+		var slider = new Slider(container, $('#slider-nav') );
+
+		slider.nav.show().find('button').on('click', function() {
+			slider.setCurrent( $(this).data('dir') );
+			slider.transition();
+		});
+	})();
+	</script>
 </body>
 </html>
