--- a/index.html
+++ b/index.html
@@ -3,61 +3,39 @@
 <head>
 	<meta charset=utf-8>
 	<title>jQuery tutorials</title>
-	<style>
-	body {
-		width: 600px;
-		margin: 100px auto 0;
-	}
-
-	* { margin: 0; padding: 0; }
-	</style>
-	<link rel="stylesheet" href="slider.css">
+	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-	<div class="slider">
-		<ul>
-		    <li>
-		        <img src="img/img1.gif" alt="image" />
-		    </li>
-		    <li>
-		        <img src="img/img2.gif" alt="image" />
-		    </li>
-		    <li>
-		        <img src="img/img3.gif" alt="image" />
-		    </li>
-		    <li>
-		        <img src="img/img4.gif" alt="image" />
-		    </li>
-		</ul>
-<<<<<<< HEAD
-	</div>
-
-	<div id="slider-nav">
-		<button data-dir="prev">Previous</button>
-		<button data-dir="next">Next</button>
-	</div>
-	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.js"></script>
-	<script src="slider.js"></script>
-	<script type="text/javascript">
-	(function() {
-		var container = $('div.slider').css('overflow', 'hidden').children('ul');
-		var slider = new Slider(container, $('#slider-nav') );
-
-		slider.nav.show().find('button').on('click', function() {
-			slider.setCurrent( $(this).data('dir') );
-			slider.transition();
-		});
-	})();
+	<script type="tuts/template" id="blogTemplate">
+		<h2>{{title}}</h2>
+		<img src={{thumbnail}} alt={{title}}>
 	</script>
-=======
-	</div>
-
-	<div id="slider-nav">
-		<button data-dir="prev">Previous</button>
-		<button data-dir="next">Next</button>
-	</div>
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.js"></script>
-	<script src="slider.js"></script>
->>>>>>> 416f9887ab095c024e03183eb7ace4d9661894ed
+	<script>
+		(function() {
+			var content = [
+				{
+					title: 'My awesome blog post',
+					thumbnail: 'http://cdn.tutsplus.com/net.tutsplus.com/authors/jeremymcpeak/chrome-dev-tools-part-3-preview.jpg'
+				},
+				{
+					title: 'My second awesome blog post',
+					thumbnail: 'http://cdn.tutsplus.com/net.tutsplus.com/authors/jeffreyway/write-code-that-embraces-change.jpg'
+				}
+			];
+
+			// trim whitespace off of html
+			var template = $.trim($('#blogTemplate').html());
+
+			$.each(content, function(key, obj) {
+				// ignore case, global
+				var tmpl = 
+					template.replace(/{{title}}/ig, obj.title)
+							.replace(/{{thumbnail}}/ig, obj.thumbnail);
+
+				$(document.body).append(tmpl);
+			});
+		})();
+	</script>
 </body>
 </html>
