--- a/index.html
+++ b/index.html
@@ -3,74 +3,47 @@
 <head>
 	<meta charset=utf-8>
 	<title>jQuery tutorials</title>
-	<style type="text/css">
-		body { width: 600px; margin: auto; }
-		ul { list-style: none; }
-		li { padding-bottom: 1em; }
-		img { float: left; padding-right: 1em; }
-		a { text-decoration: none; color: #3f3f3f }
-	</style>
 </head>
 <body>
-	<ul class="tweets">
-		<script id="tweets-template" type="text/x-handlebars-template">
-			{{#each this}}
-			<li>
-				<img src="{{thumb}}" alt="{{author}}" />
-				<p><a href="{{url}}">{{tweet}}</a></p>
-			</li>
-			{{/each}}
-		</script>
-	</ul>
-		
-
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.js"></script>
-	<script src="https://raw.github.com/wycats/handlebars.js/1.0.rc.2/dist/handlebars.js"></script>
 	<script>
 		(function() {
-			var Twitter = {
-				init: function(config) {
-					// this == Twitter
-					this.url = 'https://search.twitter.com/search.json?q='+config.query+'&callback=?';
-					console.log(this.url);
-					this.template = config.template;
-					this.container = config.container;
-					this.fetch();
-				},
+			/*
+			var arr = [1,2,3,4,5,6,7,8,9,10];
 
-				attachTemplate: function() {
-					var template = Handlebars.compile(this.template);
-					this.container.append(template(this.tweets));
 
-				},
-
-				fetch: function() {
-					var self = this;
-
-					$.getJSON(this.url, function(data) {
-						// Filter through data.results and for each one
-						// execute a function
-						self.tweets = $.map(data.results, function(tweet) {
-							return {
-								author: tweet.from_user,
-								tweet: tweet.text,
-								thumb: tweet.profile_image_url,
-								url: 'https://twitter.com/' + tweet.from_user +
-								'/status/' + tweet.id_str
-							};
-						});
-
-						// self.tweets is data
-						self.attachTemplate();
-					});
-				}
-			};
-
-			Twitter.init({
-				template: $('#tweets-template').html(),
-				container: $('ul.tweets'),
-				query: 'planetside2'
+			// if test is true, add to return array
+			arr = $.grep(arr, function(val, index) {
+				// return for greater than 5
+				return val > 5;
 			});
+			console.log(arr);
+			*/
+
+			var arr = [
+				{
+					first: 'jeff',
+					last: 'way'
+				},
+				{
+					first: 'guy',
+					last: 'way'
+				},
+				{
+					first: 'bro',
+					last: 'way'
+				},
+				{
+					first: 'john',
+					last: 'doe'
+				},
+			];
+
+			arr = $.grep(arr, function(obj, index) {
+				return obj.last === 'way';
+			});
+
+			console.log(arr);
 		})();
 	</script>
 </body>
