--- a/index.html
+++ b/index.html
@@ -5,45 +5,23 @@
 	<title>jQuery tutorials</title>
 </head>
 <body>
+	<a href="about.html">Learn more about me</a>
+	<br>
+	<a href="contact.html">Contact me</a>
+
+	<div class="wrap"></div>
+
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.js"></script>
 	<script>
 		(function() {
-			/*
-			var arr = [1,2,3,4,5,6,7,8,9,10];
-
-
-			// if test is true, add to return array
-			arr = $.grep(arr, function(val, index) {
-				// return for greater than 5
-				return val > 5;
+			var wrap = $('div.wrap');
+			// load, getJSON, get, post, getScript... all call $.ajax
+			// load about.html, only get the container
+			$('a').on('click', function(e) {
+				var href = $(this).attr('href');
+				e.preventDefault();
+				wrap.load(href + ' .container');
 			});
-			console.log(arr);
-			*/
-
-			var arr = [
-				{
-					first: 'jeff',
-					last: 'way'
-				},
-				{
-					first: 'guy',
-					last: 'way'
-				},
-				{
-					first: 'bro',
-					last: 'way'
-				},
-				{
-					first: 'john',
-					last: 'doe'
-				},
-			];
-
-			arr = $.grep(arr, function(obj, index) {
-				return obj.last === 'way';
-			});
-
-			console.log(arr);
 		})();
 	</script>
 </body>
